--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -250,14 +250,12 @@ Breaking Results Co-Chairs </font> </span></u></b>
 <font size="4">3rd and 4th International Conference on Biometric Engineering and 
 Applications (ICBEA 2019, Stockholm, Sweden, 2019; and ICBEA 2020, Xi'an, China, 
 2020)</font></span></p>
-<p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
+<p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; line-height:200%">
 <font size="4">
-<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
---</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><b><u><span lang="EN-US"><font size="4">Area Chair </font> </span></u>
-</b><span lang="EN-US"><font size="4">for International Conference on 
-Automatic Face and Gesture Recognition 2017 (FG 2017); </font> </span><span class="st">
-<font size="4">IEEE Winter Conference on Applications of Computer Vision</font><span lang="en-us"><font size="4"> 
-2017 (WACV 2017)</font></span></span><span lang="EN-US"><font size="4">.</font></span></p>
+<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">--&nbsp;</span><span style="font-style: normal; font-variant: normal; font-family: Times New Roman; font-weight: 700">Area Chair</span><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal"> 
+for ICASSP 2024; ACM Multimedia 2023; International Conference on Automatic Face 
+and Gesture Recognition 2017, 2018, 2024; IEEE Winter Conference on Applications 
+of Computer Vision 2017.</span></font></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
@@ -292,6 +290,19 @@ reviewer:</font></span></u><span lang="EN-US"><font size="4"> </font> </span></b
 Science and Technology Evaluation, Republic of Kazakhstan (2019); Medical 
 Research Council of UK Research and Innovation (2019).</font></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
+<font size="4">-- <b><u>Judge Committee</u></b> of 2023 Innovators Under 35 
+China.</font></p>
+<p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt">
+<font size="4">--&nbsp;
+<span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: 700; text-decoration: underline">
+International Scientific and Innovation Advisory Committee</span><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">: 
+Centre for Research-based Innovation called Visual Intelligence, Norway.</span></font></p>
+<p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
+<font size="4">--&nbsp;
+<span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: 700">
+<u>International Expert</u></span><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal"> 
+in the&nbsp;Turkiye-EU&nbsp;project ¨C ECITE, 2023-2025.</span></font></p>
+<p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><b><u><span lang="EN-US"><font size="4">Chair of review group 
@@ -300,10 +311,16 @@ for docentship application: </font> </span></u></b>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
---</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><b><u><span lang="EN-US"><font size="4">Guest editor for 
-nine 
+--</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><b><u><span lang="EN-US"><font size="4">Guest 
+editor for ten 
 special issues:</font></span></u><span lang="EN-US"><font size="4"> </font>
 </span></b></p>
+<p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt">
+<font size="4">(Sanna J&auml;rvel&auml;, Guoying Zhao, Andy Nguyen, Haoyu Chen) British 
+Journal of Educational Technology (BJET) special section on
+<a target="_blank" href="https://bera-journals.onlinelibrary.wiley.com/hub/journal/14678535/cfp-hybrid-intelligence">
+<font face="Times New Roman">Hybrid Intelligence: Human-AI Co-evolution and 
+Learning</font></a>, 2024-2025.</font></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt">
 <font size="4">(with B. Chen, S. Tan, G. Coatrieux) Security and Communication 
 Networks: Special issue on Data-Driven Face Forensics and Security, 2020-2021</font></p>
@@ -346,13 +363,17 @@ Applications: Challenges and Solutions,<b> </b>IEEE Transactions on Systems,
 Man, and Cybernetics - Part B: Cybernetics, 2009-2010. </font> </span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; text-indent:-21.0pt">
 <font size="4">--&nbsp;<span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:700; text-decoration:underline">Co-chair 
-of 2<span lang="en-us">2</span> international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: 
-<span lang="en-us">Workshop on Hybrid Intelligence with AD</span></span><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">RA 
-(AI, Data and Robotics Association ) forum</span><span lang="en-us" style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal"> 
+of 2<span lang="en-us">7</span> international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: 
+</span>The 3rd RePSS - Vision-based Remote Physiological Signal Sensing, with 
+IJCAI 2024;
+MAC: ACM Multimedia 2024 M</font><span lang="EN-US" style="font-size: 13.5pt; font-family: Aptos">icro-Action Analysis Challenge; </span><font size="4">
+<span lang="en-us" style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">Workshop on Hybrid Intelligence with AD</span><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">RA 
+(AI, Data and Robotics Association ) f</span></font><span style="font-size: 13.5pt; font-family: Aptos">orum<span style="font-family: Aptos; font-size:13.5pt"> 
 2023; </span>
-<span style="line-height: 125%">The 1st Challenge Workshop on Micro-gesture 
-Analysis for Hidden Emotion Un-derstanding (MiGA) with IJCAI 2023;</span></font><span lang="en-us"><font size="4"> 
-1st International Workshop on Multimodal and Responsible Affective Computing (MRAC 
+The 1st and 2nd Challenge Workshop on Micro-gesture Analysis for Hidden Emotion 
+Understanding (MiGA) with IJCAI 2023, IJCAI2024; </span><span lang="en-us">
+<font size="4"> 
+&nbsp;1st International Workshop on Multimodal and Responsible Affective Computing (MRAC 
 2023) with ACM MM 2023;</font></span><font size="4"><span style="line-height: 125%"> Chinese-MER 
 2023: Chinese Multimodal Emotion Recognition Challenge with ACM MM 2023; 2n</span></font><span style="line-height: 125%"><font size="4">d Workshop on </font></span> <font face="Times New Roman">
 <span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4">What<span lang="en-us">'</span>s Next in Affect Modelling?</font></span><font face="Times New Roman"><span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4"> 
@@ -384,6 +405,9 @@ conferences ECCV 2008, ICCV 2009, CVPR 2011.</font></p>
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><b><u><span lang="EN-US"><font size="4">Co-chair of special 
 sessions: </font> </span></u></b></p>
+<p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt">
+<font size="4">&nbsp;(with Qing Liu, Robert Jenssen) Organization chair of 
+ICASSP 2024 special session on ¡°Learning with Incomplete Medical Data¡±</font></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <span lang="EN-US"><font size="4">&nbsp;(with X. Fu and M. </font> </span>
 <span lang="EN-GB"><font size="4">Pietik&auml;inen</font></span><span lang="EN-US"><font size="4">) 
@@ -442,11 +466,11 @@ Navigation and Location-Based Services (IEEE UPINLBS), Mar. 19, 2022;</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
 <font size="4">Vision and Learning Seminar (VALSE), Jan. 19, 2022</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
-<font size="4">¡°Measuring Heart Rate from Videos¡± in Huawei Summit, Nov. 4, 
+<font size="4"><span style="font-family: Times New Roman">''</span>Measuring Heart Rate from Videos<span style="font-family: Times New Roman">''</span> in Huawei Summit, Nov. 4, 
 2021.</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
-<font size="4">¡°3D Mask Face Anti-Spoofing by Detecting Pulse from Face Videos¡± 
-in ICCV ¡°Face Anti-Spoofing Workshop and Challenge¡±, Oct. 11, 2021 </font></p>
+<font size="4"><span style="font-family: Times New Roman">''</span>3D Mask Face Anti-Spoofing by Detecting Pulse from Face Videos<span style="font-family: Times New Roman">''</span> 
+in ICCV <span style="font-family: Times New Roman">''</span>Face Anti-Spoofing Workshop and Challenge<span style="font-family: Times New Roman">''</span>, Oct. 11, 2021 </font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; line-height:200%; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
 <font size="4">Keynote talk ''Emotional Interfaces with Face Analysis'' in ICPR Workshop on ''facial and body expressions, micro-expressions 
 and behavior recognition'', Jan. 10, 2021.</font></p>
