--- a/publications.htm
+++ b/publications.htm
@@ -150,20 +150,62 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2024</b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;3<span lang="en-us">22</span>. Hanlin Mo, <b>Guoying Zhao</b>.
+<font face="Times New Roman" size="4">&nbsp;3<span lang="en-us">31</span>. Hanlin Mo, <b>Guoying Zhao</b>.
 <u>RIC-CNN: Rotation-Invariant Coordinate Convolutional Neural Network</u>. 
 Pattern Recognition. 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4">&nbsp;321.</font><font face="Times New Roman" size="4"> Jinsheng 
+<font size="4">&nbsp;3<span lang="en-us">30</span>.</font><font face="Times New Roman" size="4"> Jinsheng 
 Wei, Wei Peng, Guanming Lu, Yante Li, Jingjie Yan and <b>Guoying Zhao</b>. 
 <u>Geometric Graph Representation with Learnable Graph Structure and Adaptive AU 
 Constraint for Micro-Expression Recognition</u>. IEEE Transactions on Affective 
 Computing, 2024.</font></p>
+<div class="note-authors">
+	<p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
+	<font face="Times New Roman" size="4">&nbsp;32<span lang="en-us">9</span>. Haoyu Chen, Hao Tang, Ehsan 
+	Adeli, <b>Guoying Zhao</b>. <u>Towards Robust 3D Pose Transfer with 
+	Adversarial Learning</u>. CVPR 2024.</font></div>
+<p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
+<font face="Times New Roman" size="4">&nbsp;32<span lang="en-us">8</span>. Tuomas Varanka, Tapani Toivonen, 
+Soumya Ranjan Tripathy, <b>Guoying Zhao</b>, Erman Acar. <u>PFStorer: 
+Personalized Face Restoration and Super-Resolution</u>. CVPR 2024. </font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4">&nbsp;<font face="Times New Roman">320. Xingyu Liu, Xu Cheng, 
+<font size="4">&nbsp;<font face="Times New Roman">32<span lang="en-us">7</span>. Xingyu Liu, Xu Cheng, 
 Haoyu Chen, Hao Yu, <b>Guoying Zhao</b>. <u>Differentiable Auxiliary Learning 
 for Sketch Re-Identification</u>. AAAI Conference on Artificial Intelligence (AAAI 
 2024). (Acceptance rate: 23.75%)</font></font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<font size="4">&nbsp;32<span lang="en-us">6</span>. Yante Li, Yang Liu, </font>
+<font face="Times New Roman" size="4">Andy Nguyen, </font><font size="4">Henglin 
+Shi, Eija Vuorenmaa, </font>
+<font face="Times New Roman" size="4">Sanna J&auml;rvel&auml;, <b>Guoying Zhao</b>. </font>
+<font size="4"><u>Multimodal Interactions for Socially Shared Regulation in 
+Collaborative Learning: An Interdisciplinary Multimodal Dataset</u>. ACM 
+Transactions on Interactive Intelligent Systems (TIIS). 2024.</font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<span lang="en-us"><font size="4">&nbsp;</font></span><font size="4">3<span lang="en-us">25.
+</span>Hanlin Mo, <b>Guoying Zhao</b>. <u>Sorting Convolution Operation for 
+Achieving Rotational Invariance</u>. IEEE Signal Processing Letters. 2024</font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<font size="4"><span lang="en-us">&nbsp;</span><font face="Times New Roman">324. Shihang Dong, Kaijie Ma, Beijing Chen &amp; <b>Guoying Zhao</b>. <u>Active Defense against Voice Conversion through Generative Adversarial Network</u>. 
+IEEE Signal Processing Letters. 2024</font></font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;323. </span>
+Chaoxiong Ye, Ruyi Liu, Lijing Guo, <b>Guoying Zhao</b>, Qiang Liu. <u>A 
+negative emotional state impairs individuals¡¯ ability to filter distractorsfrom 
+working memory: an ERP study</u>. Cognitive, Affective, &amp; Behavioral 
+Neuroscience. 2024.</font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<font size="4">&nbsp;322. Marko Savic, <b>Guoying Zhao</b>. <u>RS-rPPG: Robust 
+Self-Supervised Learning for rPPG</u>. FG 2024.</font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<font size="4">&nbsp;321. Atif Shah, Haoyu Chen, <b>Guoying Zhao</b>. <u>Naive Data 
+Augmentation Might Be Toxic: Data-prior Guided Self-supervised Representation 
+Learning for Micro-gesture Recognition</u>. FG 2024.</font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<font face="Times New Roman" size="4">&nbsp;320. Yujie Liu, Mingyue Li, Jiansen 
+Jing, Yante Li, <b>Guoying Zhao</b>. <u>Clothing Sampling Based on Active 
+Learning For Cloth-Changing Person Re-Identification</u>. IEEE Conference on 
+Multimedia Expo 2024.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2023</b></font></span></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
@@ -174,7 +216,8 @@ Micro-Expressions: An Overview.</u> Proceedings of the IEEE. 2023. </font></p>
 <font face="Times New Roman" size="4">&nbsp;31<span lang="en-us">8</span>. Haoyu Chen, Henglin Shi, Xin 
 Liu, Xiaobai Li, <b>Guoying Zhao</b>. <u>SMG: A Micro-Gesture Dataset Towards 
 Spontaneous Body Gestures for Emotional Stress State Analysis</u>. International 
-Journal on Computer Vision (IJCV), 2023.</font></p>
+Journal on Computer Vision (IJC</font><font face="Times New Roman" size="4">V),<span lang="en-us">
+</span>131: 1346¨C1366, 2023.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
 <font face="Times New Roman" size="4">&nbsp;31<span lang="en-us">7</span>. Haoyu Chen, Hao Tang, Radu 
 Timofte, Luc Van Gool, <b>Guoying Zhao</b>. <u>LART: Neural Correspondence 
