--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -205,20 +205,20 @@ disciplines) by Stanford University for four consecutive years (2019-2022).</spa
 Research.com Computer Science in Finland Leader Award, 2022</span></span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4"><span style="font-family: Times New Roman">-- Dr. Wei Peng¡¯s dissertation titled 
-		¡°Automatic neural network learning for human behavior understanding¡± 
+		''Automatic neural network learning for human behavior understanding'' 
 		awarded <b>Finnish AI Dissertation Award&nbsp;2022</b>.</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4"><span style="font-family: Times New Roman">-- 2022 International 
 Society for Magnetic Resonance in Medicine (ISMRM, best conference for MRI) 
-Magna Cum Laude Merit Award (top 5%), for the work ¡°Wei Peng, Li Feng, Guoying 
+Magna Cum Laude Merit Award (top 5%), for the work ''Wei Peng, Li Feng, Guoying 
 Zhao, and Fang Liu. Learning Optimal K-space Acquisition and Reconstruction 
-using Physics-Informed Neural Networks¡±.</span></font></p>
+using Physics-Informed Neural Networks''.</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4"><span style="font-family: Times New Roman">-- The second prize of 
-IEEE Finland Jt. Chapter SP/CAS Best Paper Award 2022 for ¡°Zitong Yu, Benjia 
+IEEE Finland Jt. Chapter SP/CAS Best Paper Award 2022 for ''Zitong Yu, Benjia 
 Zhou, Jun Wan, Pichao Wang, Haoyu Chen, Xin Liu, Stan Z. Li, Guoying Zhao. 
 Searching Multi-Rate and Multi-Modal Temporal Enhanced Networks for Gesture 
-Recognition. IEEE Transactions on Image Processing (TIP), 2021.¡±</span></font></p>
+Recognition. IEEE Transactions on Image Processing (TIP), 2021.''</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
