--- a/personal.htm
+++ b/personal.htm
@@ -63,12 +63,14 @@ in 2022 elected to a </span>
 and in 2023 elected to a </span>
 <span style="font-family: Times New Roman; font-weight: 700"> member of Academia 
 Europaea</span><span style="font-family: Times New Roman; ">.</span><span style="font-family: Times New Roman; font-weight: normal"> She has 
-authored or co-authored more than <span lang="en-us">330</span> papers in journals and conferences, and 
-has served </span> </font><font size="4">
-<span style="font-family: Times New Roman; font-weight: normal">as a reviewer 
-for many journals and conferences. Her papers have currently over 27<span lang="en-us">500</span> citations in Google Scholar 
-(h-index 80). She is 
-<span lang="en-us">t</span>utorial <span lang="en-us">c</span>hair for ICPR 
+authored or co-authored more than <span lang="en-us">340</span> papers in journals and conferences, and 
+has served </span> </font>
+<span style="font-family: Times New Roman; font-weight: normal"><font size="4">
+as a reviewer for many journals and conferences. Her papers have currently over 
+284<span lang="en-us">00</span> citations in Google Scholar 
+(h-index 84). She i</font></span><font size="4"><span style="font-family: Times New Roman; font-weight: normal">s
+<span style="font-weight: normal; font-family: Times New Roman">&nbsp;</span>Associate 
+Editor in Chief for Computer Vision and Image Understanding (CVIU), tutorial <span lang="en-us">c</span>hair for ICPR 
 2024, panel chair for FG 2023, and publicity chair for SCIA 2023. S</span><span style="font-family: Times New Roman">he </span>
 <span style="font-family: Times New Roman; font-weight: normal">was </span>
 <b>
