--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -183,6 +183,9 @@ International Association for Pattern Recognition) Fel</font></b></u><font size=
 <font size="4">-- <span style="font-family: Times New Roman"><u> <b>2021-present, 
 AAI</b></u></span><b><u><span style="font-family: Times New Roman">A (The 
 Asia-Pacific Artificial Intelligence Association) Fe</span></u></b></font><span style="font-family: Times New Roman"><u><b><font size="4">llow</font></b></u></span></p>
+<p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
+<font size="4"><b><u><span style="font-family: Times New Roman">-- Associate 
+Editor in Chief: Computer Vision and Image Understanding (CVIU, 07.2024-06.2026)</span></u></b></font></p>
 <p style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt" class="MsoListParagraph">
 <font size="4"><span lang="en-us">--</span> <u><b><font face="Times New Roman">
 <span lang="en-us">2022-present, </span>AAIA Women Committee members</font></b></u></font></p>
@@ -286,8 +289,10 @@ and Malaysia.</font></span></p>
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><b><u><span lang="EN-US"><font size="4">Grant proposal 
 reviewer:</font></span></u><span lang="EN-US"><font size="4"> </font> </span></b>
-<font size="4">for the National Science Center, Poland, 2013; National Centre of 
-Science and Technology Evaluation, Republic of Kazakhstan (2019); Medical 
+<font size="4">for ERC's Advanced Grant 2020; ERC Starting Grant 2023; Swedish 
+Research Council (2024); Swiss National Science Foundation(2020); Dutch Research 
+Council (2022, 2021); the National Science Center, Poland (2013); National 
+Centre of Science and Technology Evaluation, Republic of Kazakhstan (2019); Medical 
 Research Council of UK Research and Innovation (2019).</font></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <font size="4">-- <b><u>Judge Committee</u></b> of 2023 Innovators Under 35 
@@ -301,7 +306,7 @@ Centre for Research-based Innovation called Visual Intelligence, Norway.</span><
 <font size="4">--&nbsp;
 <span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: 700">
 <u>International Expert</u></span><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal"> 
-in the&nbsp;Turkiye-EU&nbsp;project ¨C ECITE, 2023-2025.</span></font></p>
+in the&nbsp;Turkiye-EU&nbsp;project ECITE, 2023-2025.</span></font></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
@@ -407,7 +412,7 @@ conferences ECCV 2008, ICCV 2009, CVPR 2011.</font></p>
 sessions: </font> </span></u></b></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt">
 <font size="4">&nbsp;(with Qing Liu, Robert Jenssen) Organization chair of 
-ICASSP 2024 special session on ¡°Learning with Incomplete Medical Data¡±</font></p>
+ICASSP 2024 special session on </font><span lang="EN-US"><font size="4">''</font></span><font size="4">Learning with Incomplete Medical Data</font><span lang="EN-US"><font size="4">''</font></span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <span lang="EN-US"><font size="4">&nbsp;(with X. Fu and M. </font> </span>
 <span lang="EN-GB"><font size="4">Pietik&auml;inen</font></span><span lang="EN-US"><font size="4">) 
@@ -448,7 +453,10 @@ Aug. 20-24, 2006, Hongkong.</font></span></p>
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><span style="font-family: 'Times New Roman'; font-weight: 700" lang="en-us"><u><font size="4">Invited talks:</font></u></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
-<font size="4">&nbsp;IEEE International Joint Conference on Biometrics (IJCB 
+<font size="4">CVPR 2024 workshop on Women in Computer Vision<span lang="en-us"> 
+(WiCV)</span>, Jun. 18, 2024, Seattle, USA</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
+<font size="4">IEEE International Joint Conference on Biometrics (IJCB 
 2023), Sep. 25-28, Ljubljana, Slovenia.</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
 <font size="4">Nordic Learning Analytics Summer Institute (NLASI 2023), June 1, 
