--- a/publications.htm
+++ b/publications.htm
@@ -150,31 +150,58 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2024</b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;3<span lang="en-us">31</span>. Hanlin Mo, <b>Guoying Zhao</b>.
+<font face="Times New Roman" size="4">&nbsp;3<span lang="en-us">42</span>. Hanlin Mo, <b>Guoying Zhao</b>.
 <u>RIC-CNN: Rotation-Invariant Coordinate Convolutional Neural Network</u>. 
 Pattern Recognition. 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4">&nbsp;3<span lang="en-us">30</span>.</font><font face="Times New Roman" size="4"> Jinsheng 
+<font size="4">&nbsp;3<span lang="en-us">41</span>.</font><font face="Times New Roman" size="4"> Jinsheng 
 Wei, Wei Peng, Guanming Lu, Yante Li, Jingjie Yan and <b>Guoying Zhao</b>. 
 <u>Geometric Graph Representation with Learnable Graph Structure and Adaptive AU 
 Constraint for Micro-Expression Recognition</u>. IEEE Transactions on Affective 
 Computing, 2024.</font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<font size="4">&nbsp;3<span lang="en-us">40</span>. Qing Liu, Hailong Zeng,&nbsp; Zhaodong Sun, Xiaobai Li, <b>
+Guoying Zhao</b>, Yixiong Liang. Many Birds, One Stone: Medical Image 
+Segmentation with Multiple Partially Labelled Datasets. </font>
+<font face="Times New Roman" size="4">Pattern Recognition. 2024.</font></p>
 <div class="note-authors">
 	<p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
-	<font face="Times New Roman" size="4">&nbsp;32<span lang="en-us">9</span>. Haoyu Chen, Hao Tang, Ehsan 
+	<font face="Times New Roman" size="4">&nbsp;3<span lang="en-us">39</span>. Haoyu Chen, Hao Tang, Ehsan 
 	Adeli, <b>Guoying Zhao</b>. <u>Towards Robust 3D Pose Transfer with 
-	Adversarial Learning</u>. CVPR 2024.</font></div>
+	Adversarial Learning</u>. CVPR 2024.<span lang="en-us"> </span></font>
+	<font face="Times New Roman" size="4">(Acceptance rate: 23.<span lang="en-us">6</span>%)</font></div>
 <p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;32<span lang="en-us">8</span>. Tuomas Varanka, Tapani Toivonen, 
+<font face="Times New Roman" size="4">&nbsp;3<span lang="en-us">38</span>. Tuomas Varanka, Tapani Toivonen, 
 Soumya Ranjan Tripathy, <b>Guoying Zhao</b>, Erman Acar. <u>PFStorer: 
-Personalized Face Restoration and Super-Resolution</u>. CVPR 2024. </font></p>
+Personalized Face Restoration and Super-Resolution</u>. CVPR 2024. </font>
+<font face="Times New Roman" size="4">(Acceptance rate: 23.<span lang="en-us">6</span>%)</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4">&nbsp;<font face="Times New Roman">32<span lang="en-us">7</span>. Xingyu Liu, Xu Cheng, 
+<font size="4">&nbsp;<font face="Times New Roman">3<span lang="en-us">37</span>. Xingyu Liu, Xu Cheng, 
 Haoyu Chen, Hao Yu, <b>Guoying Zhao</b>. <u>Differentiable Auxiliary Learning 
 for Sketch Re-Identification</u>. AAAI Conference on Artificial Intelligence (AAAI 
 2024). (Acceptance rate: 23.75%)</font></font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4">&nbsp;32<span lang="en-us">6</span>. Yante Li, Yang Liu, </font>
+<span lang="en-us"><font size="4">&nbsp;336. </font></span>
+<font face="Times New Roman" size="4">Marko Savic, <b>Guoying Zhao</b>. Remote-photoplethysmography 
+Physical Domain Attacks Database (RPDAD). ECCV 2024. (Acceptance rate: 27.9%)</font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;335. </span>Yan 
+Jiang, Xu Cheng, Hao Yu, Xingyu Liu, Haoyu Chen, <b>Guoying Zhao</b>. Domain 
+Shifting: A Generalized Solution for Heterogeneous Cross-Modality Person 
+Re-Identification. ECCV 2024. (Acceptance rate: 27.9%)</font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<span lang="en-us"><font size="4">&nbsp;334.</font></span><font face="Times New Roman" size="4"><span lang="en-us">
+</span>Wuti Xiong, <b>Guoying Zhao</b> &amp; Xiaobai Li. Exemplar-Free Incremental 
+Deepfake Detection. 27th European Conference on Artificial Intelligence (ECAI), 
+2024. (Acceptance rate: 23%)</font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<span lang="en-us"><font size="4">&nbsp;333.</font></span><font face="Times New Roman" size="4">&nbsp;&nbsp; 
+Haotian Liu, Chenhui Pan, Yang Liu, <b>Guoying Zhao</b> &amp; Xiaobai Li. Unified 
+Video and Image Representation for Boosted Video Face Forgery Detection. 27th 
+European Conference on Artificial Intelligence (ECAI), 2024. (Acceptance rate: 
+23%)</font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<font size="4">&nbsp;3<span lang="en-us">32</span>. Yante Li, Yang Liu, </font>
 <font face="Times New Roman" size="4">Andy Nguyen, </font><font size="4">Henglin 
 Shi, Eija Vuorenmaa, </font>
 <font face="Times New Roman" size="4">Sanna J&auml;rvel&auml;, <b>Guoying Zhao</b>. </font>
@@ -182,25 +209,55 @@ Shi, Eija Vuorenmaa, </font>
 Collaborative Learning: An Interdisciplinary Multimodal Dataset</u>. ACM 
 Transactions on Interactive Intelligent Systems (TIIS). 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<span lang="en-us"><font size="4">&nbsp;</font></span><font size="4">3<span lang="en-us">25.
+<font size="4"><span lang="en-us">&nbsp;</span>331. Hao Yu, Xu Cheng, Hevin 
+Cheng, Wei Peng, Zitong Yu, <b>Guoying Zhao</b>. Discovering attention-guided 
+cross-modality correlation for visible¨Cinfrared person re-identification. 
+Pattern Recognition. 2024.</font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<span lang="en-us"><font size="4">&nbsp;330. Abdelrahman Mostafa, </font></span><font size="4"> <b>Guoying Zhao</b>.</font><span lang="en-us"><font size="4"> 
+Tangent space-free Lorentz Spatial Temporal Graph Convolution Networks. </font>
+</span><font size="4">IEEE Signal Processing Letters. 2024</font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<span lang="en-us"><font size="4">&nbsp;</font></span><font size="4">3<span lang="en-us">29.
 </span>Hanlin Mo, <b>Guoying Zhao</b>. <u>Sorting Convolution Operation for 
 Achieving Rotational Invariance</u>. IEEE Signal Processing Letters. 2024</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4"><span lang="en-us">&nbsp;</span><font face="Times New Roman">324. Shihang Dong, Kaijie Ma, Beijing Chen &amp; <b>Guoying Zhao</b>. <u>Active Defense against Voice Conversion through Generative Adversarial Network</u>. 
+<font size="4"><span lang="en-us">&nbsp;328. </span>Yizhu Zhang, Jingang Shi, 
+Jiayin Wang, Yuan Zong, Wenming Zheng, <b>Guoying Zhao</b><span lang="en-us">. 
+MaskFusionNet: A Dual-Stream Fusion Model with Masked Pre-training Mechanism for 
+rPPG Measurement. </span></font>
+<font face="Times New Roman" size="4">TCSVT<span lang="en-us">, 2024.</span></font><font size="4"><span lang="en-us">
+</span></font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<font size="4"><span lang="en-us">&nbsp;</span><font face="Times New Roman">32<span lang="en-us">7</span>. Shihang Dong, Kaijie Ma, Beijing Chen &amp; <b>Guoying Zhao</b>. <u>Active Defense against Voice Conversion through Generative Adversarial Network</u>. 
 IEEE Signal Processing Letters. 2024</font></font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;323. </span>
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;326. </span>
 Chaoxiong Ye, Ruyi Liu, Lijing Guo, <b>Guoying Zhao</b>, Qiang Liu. <u>A 
 negative emotional state impairs individuals¡¯ ability to filter distractorsfrom 
 working memory: an ERP study</u>. Cognitive, Affective, &amp; Behavioral 
 Neuroscience. 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4">&nbsp;322. Marko Savic, <b>Guoying Zhao</b>. <u>RS-rPPG: Robust 
+<font face="Times New Roman" size="4">&nbsp;325. Lili Liu, Zhaoqiang Xia, 
+Xiaobiao Zhang, Xiaoyi Feng, <b>Guoying Zhao</b>. Illumination 
+variation-resistant network for heart rate measurement by exploring RGB and MSR 
+spaces. IEEE Transactions on Instrumentation &amp; Measurement. 2024.</font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<font face="Times New Roman" size="4">&nbsp;324. Wuti Xiong, Haoyu Chen, <b>
+Guoying Zhao</b>, Xiaobai Li. AGIL-SwinT: Attention-Guided Inconsistency 
+Learning for Face Forgery Detection. Image and Vision Computing. 2024. </font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<font size="4">&nbsp;32<span lang="en-us">3</span>. Marko Savic, <b>Guoying Zhao</b>. <u>RS-rPPG: Robust 
 Self-Supervised Learning for rPPG</u>. FG 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4">&nbsp;321. Atif Shah, Haoyu Chen, <b>Guoying Zhao</b>. <u>Naive Data 
+<font size="4">&nbsp;32<span lang="en-us">2</span>. Atif Shah, Haoyu Chen, <b>Guoying Zhao</b>. <u>Naive Data 
 Augmentation Might Be Toxic: Data-prior Guided Self-supervised Representation 
 Learning for Micro-gesture Recognition</u>. FG 2024.</font></p>
+<p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<span lang="en-us"><font size="4">&nbsp;321. </font></span><font size="4">
+Zhaodong Sun, Xiaobai, Jukka Komulainen, <b>Guoying Zhao</b>. Biometric 
+Authentication Based on Enhanced Remote Photoplethysmography Signal Morphology. 
+IEEE International Joint Conference on Biometrics 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 <font face="Times New Roman" size="4">&nbsp;320. Yujie Liu, Mingyue Li, Jiansen 
 Jing, Yante Li, <b>Guoying Zhao</b>. <u>Clothing Sampling Based on Active 
