--- a/teammembers.htm
+++ b/teammembers.htm
@@ -40,8 +40,8 @@ span.contentpasted0
 		<img border="0" src="Hanlin.jpg" width="157" height="149"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Qianru.jpg" width="153" height="150"></td>
-		<td height="0" align="center" valign="top" width="222">
-		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="184">
+		<img border="0" src="Yang.jpg" width="148" height="147"></td>
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="209">
@@ -60,32 +60,31 @@ span.contentpasted0
 		<font face="Times New Roman"><b>Dr. Hanlin MO</b></font></td>
 		<td height="0" align="center" valign="top" width="224">
 		<font face="Times New Roman"><b>Dr. Qianru XU</b></font></td>
-		<td height="0" align="center" valign="top" width="222">
-		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="184">
+		<font face="Times New Roman"><b>Dr. Yang LIU</b></font></td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="184">
-		<img border="0" src="Yang.jpg" width="148" height="147"></td>
-		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="Haoyu.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Yante.jpg"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Muzammil.jpg" width="139" height="142"></td>
+		<td height="0" align="center" valign="top" width="209">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="224">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="184">
-		<font face="Times New Roman"><b>Dr. Yang LIU</b></font></td>
-		<td width="226" height="0" align="center" valign="top">
-		<span lang="zh-cn"><b><font face="Times New Roman">Dr</font></b></span><b><font face="Times New Roman">. 
-		Haoyu CHEN</font></b></td>
 		<td height="0" align="center" valign="top" width="209">
 		<b>
 		<font face="Times New Roman"><span lang="zh-cn">Dr</span>. Yante LI</font></b></td>
 		<td height="0" align="center" valign="top" width="224">
 		<b><font face="Times New Roman">Dr. Muzammil BEHZAD</font></b></td>
+		<td height="0" align="center" valign="top" width="209">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="224">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
@@ -96,61 +95,62 @@ span.contentpasted0
 		candidates</span></u>:</b></font></td>
 	</tr>
 	<tr>
-		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="Khanh.jpg" width="154" height="143"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Abdu.jpg" width="131" height="147"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Tuomas.jpg"></td>
-		<td height="0" align="center" valign="top" width="184">
-		<img border="0" src="Xingxun.jpg" width="130" height="148"></td>
-		<td height="0" align="center" valign="top" width="225">
-		<img border="0" src="Mengting.jpg"></td>
+		<td width="222" height="0" align="center" valign="top">
+		<img border="0" src="Atif.jpg"></td>
+		<td height="0" align="center" valign="top" width="224">
+		<img border="0" src="Hui.jpg"></td>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Marko.jpg"></td>
 	</tr>
 	<tr>
-		<td width="226" height="0" align="center" valign="top">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
-		<font face="Times New Roman">Mr. Khanh TRAN-THUONG</font></b></td>
 		<td height="0" align="center" valign="top" width="209">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Abdelrahman MOSTAFA</font></b></td>
 		<td height="0" align="center" valign="top" width="224">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Tuomas VARANKA</font></b></td>
-		<td height="0" align="center" valign="top" width="184">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Mr. Xingxun JIANG</b></font></td>
-		<td height="0" align="center" valign="top" width="225">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Ms. Mengting W</b></font><span lang="zh-cn"><b>EI</b></span></td>
-	</tr>
-	<tr>
-		<td width="222" height="0" align="center" valign="top">
-		<img border="0" src="Atif.jpg"></td>
-		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="Marko.jpg"></td>
-		<td height="0" align="center" valign="top" width="224">
-		<img border="0" src="Hui.jpg"></td>
-		<td height="0" align="center" valign="top" width="184">
-		　<img border="0" src="Lili.jpg" width="135" height="142"></td>
-		<td height="0" align="center" valign="top" width="225">
-		　<img border="0" src="Haotian.jpg"></td>
-	</tr>
-	<tr>
 		<td width="222" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Atif SHAH</font></b></td>
-		<td width="226" height="0" align="center" valign="top">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
-		<font face="Times New Roman">Mr. Marko SAVIC</font></b></td>
 		<td height="0" align="center" valign="top" width="224">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><font face="Times New Roman"><b>Ms. 
 		H</b></font><b><font face="Times New Roman">ui&nbsp; KUURILA-ZHANG</font></b></td>
-		<td height="0" align="center" valign="top" width="184">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<b><font face="Times New Roman">　Ms. Lili LIU</font></b></td>
+		<td width="226" height="0" align="center" valign="top">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
+		<font face="Times New Roman">Mr. Marko SAVIC</font></b></td>
+	</tr>
+	<tr>
 		<td height="0" align="center" valign="top" width="225">
-		　<font face="Times New Roman"><b>Mr. Haotian LIU</b></font></td>
+		<img border="0" src="Mengting.jpg"></td>
+		<td height="0" align="center" valign="top" width="225">
+		　<img border="0" src="Haotian.jpg"></td>
+		<td height="0" align="center" valign="top" width="225">
+		<img alt="Huai-Qian Khor" sizes="print 80px,128px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=bjnCB84AAAAJ&citpid=1" id="gsc_prf_pup-img4" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=bjnCB84AAAAJ&amp;citpid=1 128w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=bjnCB84AAAAJ&amp;citpid=1 256w" width="137" height="142"></td>
+		<td height="0" align="center" valign="top" width="225">
+		<img border="0" src="Ali.jpg" width="132" height="150"></td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
+	</tr>
+	<tr>
+		<td height="0" align="center" valign="top" width="225">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<b>
+		<font face="Times New Roman">Ms. Mengting W</font>EI</b></td>
+		<td height="0" align="center" valign="top" width="225">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Mr. Haotian LIU</b></font></td>
+		<td width="222" height="0" align="center" valign="top">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Huai-Qian K</b></font><span lang="en-us"><b>HOR</b></span></td>
+		<td width="226" height="0" align="center" valign="top">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Ali S</b></font><span lang="en-us"><b>ALAR</b></span></td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -166,11 +166,9 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Huai-Qian K</b></font><span lang="en-us"><b>HOR</b></span></td>
+		&nbsp;</td>
 		<td width="226" height="0" align="center" valign="top">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Ali S</b></font><span lang="en-us"><b>ALAR</b></span></td>
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="224">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
@@ -187,7 +185,7 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="225">
 		<img border="0" src="Hao.jpg" width="155" height="155"></td>
 		<td width="223" height="0" align="center" valign="top">
-		&nbsp;</td>
+		<img border="0" src="Boyi.jpg" width="147" height="148"></td>
 		<td width="224" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="184" height="0" align="center" valign="top">
@@ -215,10 +213,10 @@ span.contentpasted0
 	<tr>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Yujie.jpg"></td>
+		<td height="0" align="center" valign="top" width="184">
+		<img border="0" src="Xingxun.jpg" width="130" height="148"></td>
 		<td height="0" align="center" valign="top" width="225">
 		　<img border="0" src="Yushun.jpg" width="159" height="160"></td>
-		<td height="0" align="center" valign="top" width="224">
-		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
@@ -234,20 +232,28 @@ span.contentpasted0
 		<font face="Times New Roman"><b>China University of Petroleum (East 
 		China)</b></font></p>
 		<p style="text-align: center"><span lang="zh-cn">Aug. 2023 - Aug. 2024</span></td>
+		<td height="0" align="center" valign="top" width="184">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Mr. Xingxun JIANG</b></font><p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Doctoral student</b></font></p>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Southeast University</b></font></p>
+		<p style="text-align: center">Oct. 2022 - Oct. 2024</p>
+		<p>&nbsp;</p>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		　<b><span lang="zh-cn">Mr. Yushun X</span></b><span lang="en-us"><b>IAO</b></span><p>&nbsp;</p>
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Doctoral student</b></font></p>
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Southeast University</b></font></p>
-		<p>&nbsp;</p>
 		<p><span lang="zh-cn">Oct. 2023 - Sep. 2025</span></p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</td>
-		<td height="0" align="center" valign="top" width="224">
-		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
-		&nbsp;</td>
+		<p>&nbsp;</p>
+		<p>&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
@@ -255,6 +261,26 @@ span.contentpasted0
 <p class="title" style="margin-top:1cm; margin-bottom:9pt">
 <font size="4"><b><span lang="zh-cn">A</span>lumni:</b></font></p>
 <table border="0" width="40%">
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Khanh.jpg" width="154" height="143"></td>
+		<td height="0" align="center" valign="top" width="397">
+		<span lang="en-us"><b><font face="Times New Roman">D</font></b></span><b><font face="Times New Roman">r. Khanh TRAN-THUONG</font></b><p>&nbsp;</p>
+		<p style="text-align: center">AI scientist</p>
+		<p style="text-align: center">Silo.AI<span lang="en-us">, Helsinki</span></td>
+	</tr>
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Haoyu.jpg"></td>
+		<td height="0" align="center" valign="top" width="397">
+		<p style="text-align: center">&nbsp;</p>
+		<p style="text-align: center"><span lang="zh-cn"><b>
+		<font face="Times New Roman">Dr</font></b></span><b><font face="Times New Roman">. 
+		Haoyu C<span lang="en-us">hen</span></font></b></p>
+		<p style="text-align: center">&nbsp;</p>
+		<p style="text-align: center">Assistant Professor, University of Oulu, 
+		Finland</td>
+	</tr>
 	<tr>
 		<td width="243" height="0" align="center" valign="top">
 		<img border="0" src="Sheraz.jpg" width="170" height="169"></td>
@@ -354,10 +380,8 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="397">
 		&nbsp;<p style="text-align: center"><b>Dr. Xiaobai L<span lang="en-us">i</span></b></p>
 		<p>&nbsp;</p>
-		<p style="text-align: center"><span lang="en-us">Assistant Professor </span>
-		</p>
-		<p style="text-align: center"><span lang="en-us">CMVS, University of 
-		Oulu</span></td>
+		<p style="text-align: center"><span lang="en-us">Professor</span></p>
+		<p style="text-align: center"><span lang="en-us">Zhejiang University</span></td>
 	</tr>
 	<tr>
 		<td width="243" height="84" align="center" valign="top">
@@ -384,8 +408,7 @@ span.contentpasted0
 		<td height="84" align="center" valign="top" width="397">
 		&nbsp;<p style="text-align: center"><b>Dr. Jingang Shi</b></p>
 		<p>&nbsp;</p>
-		<p style="text-align: center"><span lang="en-us">Associate 
-	Professor </span></p>
+		<p style="text-align: center"><span lang="en-us">Professor </span></p>
 		<p style="text-align: center">Xi&#39;an Jiaotong University, China</td>
 	</tr>
 	<tr>
@@ -465,13 +488,18 @@ span.contentpasted0
 <font face="Times New Roman" size="4"><b>Past visiting researchers:</b></font></p>
 <ul>
 	<li>
-	<font face="Times New Roman">Mr. Haotian LIU, (Central South University): Jan. 2022-Dec. 
+	<font face="Times New Roman">Ms. Yohani S. Ranasinghe (School of IT,
+		Monash University Malaysia): Feb. - May 2024</font></li>
+	<li>
+	<p class="title" style="line-height: 150%"><font face="Times New Roman">Ms. 
+	Lili Liu (Northwestern Polytechnic University, Xi&#39;an): Feb. 2022 - Jan. 2024</font></li>
+	<li>
+	<p class="title" style="line-height: 150%"><font face="Times New Roman">Mr. Haotian LIU (Central South University): Jan. 2022 - Dec. 
 		2022</font></li>
 	<li>
 	<p class="title" style="line-height: 150%">
 		<font face="Times New Roman">Assoc. Prof. Xu CHENG (Nanjing 
-		University of Information Science and Technology): July 2021 - 
-		<span lang="zh-cn">Nov</span>. 
+		University of Information Science and Technology): July 2021 - Nov. 
 		2022</font></li>
 	<li>
 	<p class="title" style="line-height: 150%">
